--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1358,7 +1358,6 @@
   <string name="preferences__linked_devices">الأجهزة المتصلة</string>
   <string name="preferences__light_theme">فاتح</string>
   <string name="preferences__dark_theme">داكن</string>
-  <string name="preferences__system_theme">نظام التشغيل</string>
   <string name="preferences__appearance">المظهر</string>
   <string name="preferences__theme">المظهر</string>
   <string name="preferences__default">افتراضي</string>
@@ -1593,6 +1592,7 @@
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__introducing_pins">نقدم لكم الأرقام التعريفية الشخصية أو PINs</string>
   <string name="KbsMegaphone__update_pin">تحديث الرقم التعريفي الشخصي</string>
+  <!--Profile Names Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">أيقونة النقل.</string>
   <string name="ConversationListFragment_loading">قيد التحميل…</string>
@@ -1659,7 +1659,6 @@
   <string name="preferences_app_protection__pin">الرقم التعريفي الشخصي</string>
   <string name="preferences_app_protection__change">تغيير</string>
   <string name="preferences_app_protection__create">إنشاء</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">يضيف الرقم التعريفي الشخصي طبقة إضافية من الأمان وهو طريقة لعمل نسخة احتياطية من حسابك. سيتم سؤالك عنه عند التسجيل برقمك الهاتفي في Signal. اذا نسيت الرقم التعريفي الشخصي سيتم إقفال حسابك لمدة 7 أيام.</string> -->
   <string name="AppProtectionPreferenceFragment_none">لا شيء </string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">الرقم التعريفي الشخصي لحماية التسجيل مختلف عن رمز التحقق في رسالة SMS التي استقبلتها الآن. يُرجى إدخال الرقم التعريفي الشخصي الذي قمت بتحديده في إعدادات التطبيق من قبل.</string>
   <string name="registration_activity__registration_lock_pin">الرقم التعريفي الشخصي لحماية التسجيل</string>
