--- a/app/src/main/res/values-bs/strings.xml
+++ b/app/src/main/res/values-bs/strings.xml
@@ -1245,7 +1245,6 @@
   <string name="preferences__linked_devices">Povezani uređaji</string>
   <string name="preferences__light_theme">Svijetla</string>
   <string name="preferences__dark_theme">Tamna</string>
-  <string name="preferences__system_theme">Sistem</string>
   <string name="preferences__appearance">Izgled</string>
   <string name="preferences__theme">Tema</string>
   <string name="preferences__default">Standardno</string>
@@ -1450,6 +1449,7 @@
   <string name="RegistrationLockFragment__next">Dalje</string>
   <string name="RegistrationLockFragment__forgot_pin">Zaboravili ste PIN?</string>
   <!--KBS Megaphone-->
+  <!--Profile Names Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Sličica transporta</string>
   <string name="ConversationListFragment_loading">Učitavanje…</string>
