--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -1220,7 +1220,6 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <string name="preferences__linked_devices">Lotutako gailuak</string>
   <string name="preferences__light_theme">Argia</string>
   <string name="preferences__dark_theme">Iluna</string>
-  <string name="preferences__system_theme">Sistema</string>
   <string name="preferences__appearance">Itxura</string>
   <string name="preferences__theme">Gaia</string>
   <string name="preferences__default">Lehenetsia</string>
@@ -1444,6 +1443,7 @@ Inportatu \'SMSBackup and Restorekin\' bateragarria den enkriptatu gabeko babesk
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__introducing_pins">PIN-ak sartzen</string>
   <string name="KbsMegaphone__update_pin">Eguneratu PIN-a</string>
+  <!--Profile Names Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Garraio ikonoa</string>
   <string name="ConversationListFragment_loading">Kargatzen…</string>
