--- a/app/src/main/res/values-ha/strings.xml
+++ b/app/src/main/res/values-ha/strings.xml
@@ -1233,7 +1233,6 @@
   <string name="preferences__linked_devices">Na\'urori da aka hada</string>
   <string name="preferences__light_theme">Haske</string>
   <string name="preferences__dark_theme">Duhu</string>
-  <string name="preferences__system_theme">Tsarin na\'ura</string>
   <string name="preferences__appearance">Siffa</string>
   <string name="preferences__theme">Jigo</string>
   <string name="preferences__default">Tanadadde</string>
@@ -1464,6 +1463,7 @@
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__introducing_pins">Gabatar da lambobin sirri</string>
   <string name="KbsMegaphone__update_pin">Sabunta lambobin sirri</string>
+  <!--Profile Names Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Gusar da alamar hoto</string>
   <string name="ConversationListFragment_loading">Yana lodi</string>
@@ -1525,7 +1525,6 @@
   <string name="preferences_app_protection__pin">Lambobin sirri</string>
   <string name="preferences_app_protection__change">Canza</string>
   <string name="preferences_app_protection__create">kirkira</string>
-  <!-- Removed by excludeNonTranslatables <string name="preferences_app_protection__your_pin_adds_an_extra_layer_of_security_and_backs">Lambobin sirrinka/ki na kara karfin tsaron asusunka/ki. Za\'a tambayeka/ki shi idan kayiwa lambar wayarka/ki rijistar Signal. Idan ka/kika manta da lambobin sirrin, za\'a kulle damar samun asusunka/ki zuwa kwana 7.</string> -->
   <string name="AppProtectionPreferenceFragment_none">Babu.</string>
   <string name="registration_activity__the_registration_lock_pin_is_not_the_same_as_the_sms_verification_code_you_just_received_please_enter_the_pin_you_previously_configured_in_the_application">Lambar sirrin rijista ba daya bane da lambar sirrin tabbatarwar SMS da ka/kika samu. Dan shigar da lambar sirrin that ka/kika fara sakawa a manhajar.</string>
   <string name="registration_activity__registration_lock_pin">Lambar sirrin rijista</string>
