--- a/app/src/main/res/values-ms/strings.xml
+++ b/app/src/main/res/values-ms/strings.xml
@@ -1119,7 +1119,6 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="preferences__linked_devices">Peranti dipaut</string>
   <string name="preferences__light_theme">Cerah</string>
   <string name="preferences__dark_theme">Gelap</string>
-  <string name="preferences__system_theme">Sistem</string>
   <string name="preferences__appearance">Penampilan</string>
   <string name="preferences__theme">Tema</string>
   <string name="preferences__default">Lalai</string>
@@ -1311,6 +1310,7 @@ Menerima mesej pertukaran kunci untuk versi protokol yang tidak sah.</string>
   <string name="RegistrationLockFragment__forgot_your_pin">Lupa PIN anda?</string>
   <!--KBS Megaphone-->
   <string name="KbsMegaphone__introducing_pins">Memperkenalkan PIN</string>
+  <!--Profile Names Megaphone-->
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">Pindah ikon</string>
   <string name="ConversationListFragment_loading">Memuatkan…</string>
