--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -285,6 +285,7 @@
     <string name="ConversationFragment_you_can_swipe_to_the_left_reply">You can swipe to the left on any message to quickly reply</string>
     <string name="ConversationFragment_outgoing_view_once_media_files_are_automatically_removed">Outgoing view-once media files are automatically removed after they are sent</string>
     <string name="ConversationFragment_you_already_viewed_this_message">You already viewed this message</string>
+    <string name="ConversationFragment__you_can_add_notes_for_yourself_in_this_conversation">You can add notes for yourself in this conversation. If your account has any linked devices, new notes will be synced.</string>
 
     <!-- ConversationListActivity -->
     <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">There is no browser installed on your device.</string>
@@ -311,6 +312,8 @@
         <item quantity="one">Moved conversation to inbox</item>
         <item quantity="other">Moved %d conversations to inbox</item>
     </plurals>
+    <string name="ConversationListFragment__your_profile_name_has_been_created">Your profile name has been created.</string>
+    <string name="ConversationListFragment__your_profile_name_has_been_saved">Your profile name has been saved.</string>
 
     <!-- ConversationListItem -->
     <string name="ConversationListItem_key_exchange_message">Key exchange message</string>
@@ -847,6 +850,8 @@
     <string name="ThreadRecord_you_marked_verified">You marked verified</string>
     <string name="ThreadRecord_you_marked_unverified">You marked unverified</string>
     <string name="ThreadRecord_message_could_not_be_processed">Message could not be processed</string>
+    <string name="ThreadRecord_message_request">Message Request</string>
+    <string name="ThreadRecord_s_added_you_to_the_group">%1$s added you to the group</string>
 
     <!-- UpdateApkReadyListener -->
     <string name="UpdateApkReadyListener_Signal_update">Signal update</string>
@@ -1364,6 +1369,14 @@
     <string name="AndroidManifest__invite_friends">Invite friends</string>
     <string name="AndroidManifest_archived_conversations">Archived conversations</string>
     <string name="AndroidManifest_remove_photo">Remove photo</string>
+
+    <!-- Message Requests Megaphone -->
+    <string name="MessageRequestsMegaphone__message_requests">Message requests</string>
+    <string name="MessageRequestsMegaphone__users_can_now_choose_to_accept">Users can now choose to accept a new conversation. Profile names let people know who\'s messaging them.</string>
+    <string name="MessageRequestsMegaphone__add_profile_name">Add profile name</string>
+    <string name="MessageRequestsMegaphone__new_message_requests">New: Message requests</string>
+    <string name="MessageRequestsMegaphone__add_name">Add name</string>
+    <string name="MessageRequestsMegaphone__you_can_now_choose_whether_to_accept">You can now choose whether to accept a new conversation. You’ll see options to \"Accept,\" \"Delete,\" or \"Block.\"</string>
 
     <!-- arrays.xml -->
     <string name="arrays__import_export">Import</string>
@@ -1923,7 +1936,10 @@
     <string name="MessageRequestProfileView_member_of_one_group">Member of %1$s</string>
     <string name="MessageRequestProfileView_member_of_two_groups">Member of %1$s and %2$s</string>
     <string name="MessageRequestProfileView_member_of_many_groups">Member of %1$s, %2$s, and %3$s</string>
-    <string name="MessageRequestProfileView_members">%1$d members</string>
+    <plurals name="MessageRequestProfileView_members">
+        <item quantity="one">%1$d member</item>
+        <item quantity="other">%1$d members</item>
+    </plurals>
     <plurals name="MessageRequestProfileView_member_of_others">
         <item quantity="one">%d other</item>
         <item quantity="other">%d others</item>
